--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Windows Executables
+name: Unity Windows Build
 
 on:
   workflow_dispatch:
@@ -6,29 +6,33 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-    name: Build Windows (x64 & x86)
-    runs-on: windows-latest
-
-    strategy:
-      matrix:
-        arch: [x64, x86]
+  build-windows64:
+    name: Build Windows (x64)
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Setup Unity Builder
-        uses: game-ci/unity-builder@v3
+      # Кэш Unity Library (ускоряет повторные сборки)
+      - name: Cache Library
+        uses: actions/cache@v4
         with:
-          targetPlatform: StandaloneWindows${{ matrix.arch }}
+          path: Library
+          key: Library-${{ runner.os }}-${{ hashFiles('**/Packages/packages-lock.json') }}
+          restore-keys: |
+            Library-${{ runner.os }}-
+
+      - name: Build Windows 64
+        uses: game-ci/unity-builder@v4
+        with:
+          targetPlatform: StandaloneWindows64
+          unityVersion: 2022.3.21f1    # ✅ стабильная версия, поддерживаемая GameCI
         env:
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
-      - name: Upload Build Artifacts
+      - name: Upload build
         uses: actions/upload-artifact@v4
         with:
-          name: VayneEffortsAvaLab-${{ matrix.arch }}
-          path: build/
+          name: VayneEffortsAvaLab-Windows64
+          path: build/StandaloneWindows64
