--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,14 +23,26 @@ jobs:
           restore-keys: |
             Library-${{ runner.os }}-
 
+      # ✅ Активация Unity перед сборкой
+      - name: Activate Unity
+        uses: game-ci/unity-activate@v4
+        with:
+          unityVersion: 2022.3.21f1
+        env:
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+
+      # 🏗️ Основная сборка
       - name: Build Windows 64
         uses: game-ci/unity-builder@v4
         with:
           targetPlatform: StandaloneWindows64
-          unityVersion: 2022.3.21f1    # ✅ стабильная версия, поддерживаемая GameCI
+          unityVersion: 2022.3.21f1
         env:
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
+      # 📦 Загрузка результата
       - name: Upload build
         uses: actions/upload-artifact@v4
         with:
