--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
   build-windows64:
     name: Build Windows (x64)
     runs-on: ubuntu-latest
+    timeout-minutes: 60
 
     steps:
       - name: Checkout repository
@@ -23,9 +24,9 @@ jobs:
           restore-keys: |
             Library-${{ runner.os }}-
 
-      # ✅ Активация Unity перед сборкой
+      # ✅ Активация Unity
       - name: Activate Unity
-        uses: game-ci/unity-activate@v4
+        uses: game-ci/unity-activate@v2
         with:
           unityVersion: 2022.3.21f1
         env:
@@ -33,7 +34,7 @@ jobs:
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
 
-      # 🏗️ Основная сборка
+      # 🏗️ Сборка Windows 64
       - name: Build Windows 64
         uses: game-ci/unity-builder@v4
         with:
