--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,31 +1,34 @@
-name: Build Windows Executables
+name: Build Unity Project
 
 on:
-  workflow_dispatch:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  build:
-    name: Build Windows 64-bit
+  buildWindows:
+    name: Build Windows 64
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          lfs: true
+
+      - name: Cache Library
+        uses: actions/cache@v3
+        with:
+          path: Library
+          key: Library-${{ runner.os }}-${{ hashFiles('**/Packages/manifest.json') }}
+          restore-keys: |
+            Library-${{ runner.os }}-
 
       - name: Build with Unity
         uses: game-ci/unity-builder@v4
-        with:
-          targetPlatform: StandaloneWindows64
-          unityVersion: 2022.3.21f1
         env:
-          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
-          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
           UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-
-      - name: Upload Build Artifacts
-        uses: actions/upload-artifact@v4
         with:
-          name: WindowsBuild
-          path: build/
+          projectPath: .
+          unityV
