--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,14 @@
-name: Build Unity Project
+name: Build Unity Windows
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
-  buildWindows:
-    name: Build Windows 64
+  build:
+    name: Build Unity on Self-Hosted
     runs-on: self-hosted
 
     steps:
@@ -17,7 +17,7 @@ jobs:
         with:
           lfs: true
 
-      - name: Cache Library
+      - name: Cache Library folder
         uses: actions/cache@v3
         with:
           path: Library
@@ -25,20 +25,18 @@ jobs:
           restore-keys: |
             Library-${{ runner.os }}-
 
-      - name: Build with Unity
-        uses: game-ci/unity-builder@v4
-        env:
-          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
-        with:
-          projectPath: .
-          unityVersion: 2022.3.21f1
-          targetPlatform: StandaloneWindows64
-          buildName: VayneEffortsAvaLab
-          buildPath: build/StandaloneWindows64
-          customParameters: "-screen-width 1920 -screen-height 1080"
+      - name: Build Unity project
+        run: |
+          "C:\Program Files\Unity\Hub\Editor\6000.2.9f1\Editor\Unity.exe" ^
+            -batchmode ^
+            -nographics ^
+            -quit ^
+            -projectPath "${{ github.workspace }}" ^
+            -executeMethod BuildScript.BuildGame ^
+            -logFile build_log.txt
 
-      - name: Upload Build Artifacts
+      - name: Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: WindowsBuild
-          path: build/StandaloneWindows64
+          name: Windows-Build
+          path: Builds/
